# voting-agent

./: .gcloudignore  .gitignore  Dockerfile  README.md  biome.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  eval.yml
app/: agent.py  agent_runtime_app.py
app/app_utils/: telemetry.py  typing.py
frontend/: main.py
frontend/static/: stream-handler.js  style.css  voting.js
frontend/templates/: index.html
terraform/: agent.tf  app.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  wif.tf
tests/eval/: run_platform_eval.py  setup_monitor.py
tests/integration/: test_agent.py  test_agent_runtime_app.py
tests/unit/: test_agent_location.py  test_eval.py  test_placeholder.py  test_screen_prompt.py  test_section_parser.py  test_telemetry.py  test_typing.py
