[project]
name = "voting-agent"
version = "0.1.0"
description = "Voting agent: parallel ad copy generation with LLM judge"
authors = [
    {name = "kweinmeister", email = "kweinmeister@google.com"},
]
dependencies = [
    "fastapi>=0.136.1",
    "gcsfs>=2026.5.0",
    "google-adk>=2.2.0",
    "google-cloud-aiplatform[agent-engines]>=1.156.0",
    "google-cloud-logging>=3.16.0",
    "google-cloud-modelarmor>=0.6.0",
    "jinja2>=3.1.6",
    "opentelemetry-instrumentation-fastapi>=0.62b0",
    "opentelemetry-instrumentation-google-genai>=0.7b1",
    "opentelemetry-instrumentation-grpc>=0.62b0",
    "opentelemetry-instrumentation-httpx>=0.62b0",
    "protobuf>=6.33.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
requires-python = ">=3.11,<3.14"


[dependency-groups]
dev = [
    "nest-asyncio>=1.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "types-requests",
]

[project.optional-dependencies]
eval = [
    "google-cloud-aiplatform[evaluation]>=1.156.0",
    "pandas>=2.0.0",
]
lint = [
    "codespell>=2.4.2",
    "ruff>=0.15.16",
    "ty>=0.0.40",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "C",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP", # pyupgrade
    "RUF", # ruff specific rules
]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app", "frontend"]

[tool.ty]
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
exclude = [".venv/**"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
possibly-missing-attribute = "ignore"
not-subscriptable = "ignore"
deprecated = "ignore"

[tool.codespell]
ignore-words-list = "rouge"
skip = "./locust_env/*,uv.lock,.venv,./frontend,**/package-lock.json"


[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
addopts = "--durations=5"
filterwarnings = [
    "ignore:.*feature FeatureName.* is enabled.*",
    "ignore:::authlib.*",
    "ignore:.*Using `@model_validator` with mode='after' on a classmethod is deprecated.*",
    "ignore:.*You should use `Logger` instead.*",
    "ignore:.*You should use `LoggerProvider` instead.*",
    "ignore:.*You should use `ProxyLoggerProvider` instead.*",
    "ignore:.*You should use `set_logger_provider` instead.*",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "frontend"]

[tool.agents-cli]
name = "voting-agent"
description = "Voting / Best-of-N agent: generates parallel ad copy options and selects the best"
base_template = "adk"
agent_directory = "app"

generated_at = "2026-05-02T16:22:33.738624+00:00"
acli_version = "0.1.2"

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"
session_type = "none"
cicd_runner = "skip"
include_data_ingestion = false
datastore = "none"
